feat: add NEW `/macho/info/strings` route to `ipswd`
